fix: horizontal scroll

--- a/assets/scss/components/_image.scss
+++ b/assets/scss/components/_image.scss
@@ -23,6 +23,7 @@ figcaption {
 
 .gallery {
     display: flex;
+    max-width: 100vw;
     margin: 0 -5%;
 
     .image-wrapper {
